--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 	<!--Шапка страницы -->
 	<header class="main-header">
 		<nav class="main-navigation">
+			<h1 class="visually-hidden">Интро</h1>
+			<img src="img/IMG_9190.jpg" width="100" height="50" alt="content_image"> <!--Здесь большая фоновая картинка с текстом-->
+			<img src="img/intro-welcome.svg" width="100" height="50" alt="intro_welcome"> <!--Надпись Welcome-->
+			<img src="img/intro-mask.svg" width="100" height="50" alt="content_image">
+
 			<a class="main-header-logo"> 
-				<img src="img/index-logo.svg" width="" height="" alt="Логотип Седона">
+				<img src="img/logo-sedona.svg" width="100" height="50" alt="Логотип Седона">
 			</a>
 			
 		   <ul class="site-navigation">
@@ -25,18 +30,13 @@
 	<!--Основная часть страницы -->
 	<main class="main-content">
 	   
-		<div class="intro">
-			<h1 class="visually-hidden">Интро</h1>
-			<img src="http://placehold.it/150x100" alt="content_image"> <!--Здесь большая картинка с текстом-->
-		</div>
-
 		<!--Причины приехать -->
 		<section class="features"> 
 
 		  <h2 class="visually-hidden">Преимущества</h2>
 
 			<div class="real-town">
-				<img src="" alt="photo1">
+				<img src="" alt="photo1"><!--Картинка-->
 				<h3>Настоящий городок</h3>
 				<p>- №1 - </p>
 				<p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
@@ -117,14 +117,20 @@
 				<a href="#">#visitsedona</a>
 		
 			<div class="social-network">
-				<a href="#">twitter</a>
-				<a href="#">facebook</a>
-				<a href="#">youtube</a>
+				<a href="#" class="twitter">
+					<img src="img/twitter.svg" width="100" height="50" alt="twitter_logo">
+				</a>
+				<a href="#" class="facebook">
+					<img src="img/fb-icon.svg" width="100" height="50" alt="facebook_logo">
+				</a>
+				<a href="#" class="youtube">
+					<img src="img/youtube.svg" width="100" height="50" alt="youtube_logo">
+				</a>
 			</div>
 
 			<a href="" class="copyright">
 				<p>website by</p>
-				<img src="http://placehold.it/150x100" alt="logo_htmlacademy">			
+				<img src="img/logo-htmlacademy.svg" width="100" height="50" alt="logo_htmlacademy" class="logo-htmlacademy">			
 			</a>
 			
 		</div>  
