--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 	<header class="main-header">
 		<nav class="main-navigation">
 			<h1 class="visually-hidden">Интро</h1>
-			<img src="img/IMG_9190.jpg" width="100" height="50" alt="content_image"> <!--Здесь большая фоновая картинка с текстом-->
+			<img src="img/main_photo.jpg" width="1200" height="562" alt="content_image"> <!--Здесь большая фоновая картинка с текстом-->
 			<img src="img/intro-welcome.svg" width="100" height="50" alt="intro_welcome"> <!--Надпись Welcome-->
 			<img src="img/intro-mask.svg" width="100" height="50" alt="content_image">
 
 			<a class="main-header-logo"> 
-				<img src="img/logo-sedona.svg" width="100" height="50" alt="Логотип Седона">
+				<img src="img/logo-sedona.svg" width="579" height="296" alt="Логотип Седона">
 			</a>
 			
 		   <ul class="site-navigation">
 				<li class="info"><a href="info.html">Информация</a></li>
                 <li class="media"><a href="media.html">Фото и Видео</a></li>
                 <li class="map"><a href="map.html">Карта штата</a></li>
-                <li class="hotels"><a href="hotels.html">Гостиницы</a></li>	
+                <li class="hotels"><a href="inner.html">Гостиницы</a></li>	
 		  </ul>	
 		</nav>   	
 	</header>
@@ -36,9 +36,9 @@
 		  <h2 class="visually-hidden">Преимущества</h2>
 
 			<div class="real-town">
-				<img src="" alt="photo1"><!--Картинка-->
+				<img src="img/picture_01.jpg" alt="photo1"><!--Картинка-->
 				<h3>Настоящий городок</h3>
-				<p>- №1 - </p>
+				<p class="number_one">- №1 - </p>
 				<p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
 				
 			</div>
@@ -104,7 +104,7 @@
 		<!--Поиск отеля -->
 		<section class="find-hotel">
 			<div class="form">
-				<img src="" alt="image">
+				<!--Картинка карты-->
 				<h5>Заинтересовались?</h5>
 				<p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
 				<!--Здесь форма поиска гостиницы-->
@@ -118,19 +118,19 @@
 		
 			<div class="social-network">
 				<a href="#" class="twitter">
-					<img src="img/twitter.svg" width="100" height="50" alt="twitter_logo">
+					<img src="img/twitter.svg" width="50" height="92" alt="twitter_logo">
 				</a>
 				<a href="#" class="facebook">
-					<img src="img/fb-icon.svg" width="100" height="50" alt="facebook_logo">
+					<img src="img/fb-icon.svg" width="50" height="92" alt="facebook_logo">
 				</a>
 				<a href="#" class="youtube">
-					<img src="img/youtube.svg" width="100" height="50" alt="youtube_logo">
+					<img src="img/youtube.svg" width="50" height="92" alt="youtube_logo">
 				</a>
 			</div>
 
 			<a href="" class="copyright">
 				<p>website by</p>
-				<img src="img/logo-htmlacademy.svg" width="100" height="50" alt="logo_htmlacademy" class="logo-htmlacademy">			
+				<img src="img/logo-htmlacademy.svg" width="454" height="158" alt="logo_htmlacademy" class="logo-htmlacademy">			
 			</a>
 			
 		</div>  
