--- a/inner.html
+++ b/inner.html
@@ -32,35 +32,35 @@
     		<form id="table"> 
                 <fieldset class="information">
                     <h2 class="visually-hidden">Фильтр</h2>
-                    <legend>Информация</legend>
+                    <legend>Инфраструктура</legend>
 
-                    <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="baxter-of-california" id="filter-baxter-of-california" checked>
-                    <label for="filter-baxter-of-california">Бассейн</label>
+                    <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="infrastructure" id="filter-infrastructure" checked>
+                    <label for="filter-infrastructure">Бассейн</label>
 
-                    <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="baxter-of-california" id="filter-baxter-of-california">
-                    <label for="filter-baxter-of-california">Парковка</label>
+                    <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="infrastructure" id="filter-infrastructure">
+                    <label for="filter-infrastructure">Парковка</label>
 
-                    <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="baxter-of-california" id="filter-baxter-of-california">
-                    <label for="filter-baxter-of-california">Wi-Fi</label>
+                    <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="infrastructure" id="filter-infrastructure">
+                    <label for="filter-infrastructure">Wi-Fi</label>
 
                 </fieldset>  
 
                 <fieldset class="accommodation">
                     <h2 class="visually-hidden">Фильтр</h2>
-                    <legend>Информация</legend>
+                    <legend>Тип жилья</legend>
 
-                    <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="baxter-of-california" id="filter-baxter-of-california" checked>
-                    <label for="filter-baxter-of-california">Гостиница</label>
+                    <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="accommodation" id="filter-accommodation" checked>
+                    <label for="filter-accommodation">Гостиница</label>
 
-                    <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="baxter-of-california" id="filter-baxter-of-california" checked>
-                    <label for="filter-baxter-of-california">Мотель</label>
+                    <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="accommodation" id="filter-accommodation" checked>
+                    <label for="filter-accommodation">Мотель</label>
 
-                    <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="baxter-of-california" id="filter-baxter-of-california" checked>
-                    <label for="filter-baxter-of-california">Апартаменты</label>
+                    <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="accommodation" id="filter-accommodation" checked>
+                    <label for="filter-accommodation">Апартаменты</label>
 
                 </fieldset> 
 
-                <fieldset class="accommodation">
+                <fieldset class="price_per_night">
                     <h2 class="visually-hidden">Фильтр</h2>
                     <legend>Стоимость в сутки (р):</legend>
 
