--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
 	<meta charset="utf-8">
 	<title>HTML Academy: Седона</title>
-	<link rel="stylesheet" type="text/css" href="css/">
+	<link href="css/style.css.css" rel="stylesheet">
 </head>
 <body>
-	<!--Шапка страницы -->
+	<!--Шапка страницы-->
 	<header class="main-header">
 		<nav class="main-navigation">
-			<h1 class="visually-hidden">Интро</h1>
-			<img src="img/main_photo.jpg" width="1200" height="562" alt="content_image"> <!--Здесь большая фоновая картинка с текстом-->
-			<img src="img/intro-welcome.svg" width="100" height="50" alt="intro_welcome"> <!--Надпись Welcome-->
-			<img src="img/intro-mask.svg" width="100" height="50" alt="content_image">
+			<h1 class="visually-hidden">Отели в городе Седона</h1>
+			<!--Здесь большая фоновая картинка с текстом-->
+			<img src="img/intro-welcome.svg" width="425" height="365" alt="добро_пожаловать"> <!--Надпись Welcome-->
+			<img src="img/intro-mask.svg" width="1200" height="159" alt="маска">
 
 			<a class="main-header-logo"> 
-				<img src="img/logo-sedona.svg" width="579" height="296" alt="Логотип Седона">
+				<img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип Седона">
 			</a>
 			
 		   <ul class="site-navigation">
@@ -36,9 +36,9 @@
 		  <h2 class="visually-hidden">Преимущества</h2>
 
 			<div class="real-town">
-				<img src="img/picture_01.jpg" alt="photo1"><!--Картинка-->
+				<img src="img/picture_01.jpg" alt="картинка"><!--Картинка-->
 				<h3 class="page-title">Настоящий городок</h3>
-				<p class="number_one">- №1 - </p>
+				<p class="number_one"><!--svg--> </p>
 				<p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
 				
 			</div>
@@ -112,18 +112,18 @@
 					<fieldset>
 						<legend>Поиск гостиницы в Седоне</legend>						
 						<p>Дата заезда<input type="calendar-input" class="filter_calendar" name="calendar" value="24 апреля 2017">
-                          <img src="img/calendar.svg">
+                          <img src="img/calendar.svg" alt="календарь">
 						</p>
 						<p>Дата выезда<input type="calendar-input" class="filter_calendar" name="calendar" value="4 июля 2017 года">
-                          <img src="img/calendar.svg">
+                          <img src="img/calendar.svg" alt="календарь">
 						</p>
 
 						<p>Взрослые<input type="calendar-input" class="filter_calendar" name="calendar" value="2">
-                          <img src="img/svg">
+                          <img src="img/svg" alt="календарь">
 						</p> 
 
 						<p>Дети<input type="calendar-input" class="filter_calendar" name="calendar" value="0">
-                          <img src="img/svg">
+                          <img src="img/svg" alt="календарь">
 						</p>
 						<button type="submit" class="filter-button button">Найти</button>
 					</fieldset>
@@ -135,23 +135,23 @@
 	<!--Футер-->
 	<footer class="page-footer">
 		<div class="contact-information">
-				<a href="#">#visitsedona</a>
+				<a href="#" class="visitsedona" alt="хештег">#visitsedona</a>
 		
 			<div class="social-network">
 				<a href="#" class="twitter">
-					<img src="img/twitter.svg" width="50" height="92" alt="twitter_logo">
+					<img src="img/twitter.svg" width="50" height="92" alt="twitter_логотип">
 				</a>
 				<a href="#" class="facebook">
-					<img src="img/fb-icon.svg" width="50" height="92" alt="facebook_logo">
+					<img src="img/fb-icon.svg" width="50" height="92" alt="facebook_логотип">
 				</a>
 				<a href="#" class="youtube">
-					<img src="img/youtube.svg" width="50" height="92" alt="youtube_logo">
+					<img src="img/youtube.svg" width="50" height="92" alt="youtube_логотип">
 				</a>
 			</div>
 
-			<a href="" class="copyright">
+			<a href="https://htmlacademy.ru/" class="copyright">
 				<p>website by</p>
-				<img src="img/logo-htmlacademy.svg" width="454" height="158" alt="logo_htmlacademy" class="logo-htmlacademy">			
+				<img src="img/logo-htmlacademy.svg" width="108.08" height="36.85" alt="htmlacademy_логотип" class="logo-htmlacademy">			
 			</a>
 			
 		</div>  
