--- a/inner.html
+++ b/inner.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link href="css/style.inner.css.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic" rel="stylesheet">
   </head>
 <body>
 	<!--Шапка страницы -->
@@ -64,12 +65,10 @@
                     <h2 class="visually-hidden">Фильтр_цена</h2>
                     <legend>Стоимость в сутки (р):</legend>
 
-                    <p><input type="filter_price" class="filter_hotels" name="hotels" value="От 0">
-                          <img src="img/svg">
+                    <p><input type="filter_price" class="filter_hotels" name="hotels" placeholder="От 0">
                     </p>
 
-                    <p><input type="filter_price" class="filter_hotels" name="hotels" value="До 3000">
-                          <img src="img/svg">
+                    <p><input type="filter_price" class="filter_hotels" name="hotels" placeholder="До 3000">
                     </p>
                     <button type="submit" class="filter-button button">Показать</button>
                 </fieldset> 
@@ -100,8 +99,8 @@
                 </ul>  
 
                 <div> <!--Стрелки-->
-                    <span class="arrow_up"><img src="img/icon-up-dir.svg"></span>
-                    <span class="arrow_down"><img src="img/icon-down-dir.svg"></span>
+                    <span class="arrow_up"><img src="img/icon-up-dir.svg" alt="стрелка вверх"></span>
+                    <span class="arrow_down"><img src="img/icon-down-dir.svg" alt="стрелка вниз "></span>
                 </div> 
     		</div>
 
@@ -175,19 +174,19 @@
         
             <div class="social-network">
                 <a href="#" class="twitter">
-                    <img src="img/twitter.svg" width="17" height="15" alt="twitter_логотип">
+                    <img src="img/twitter.svg" width="12" height="22" alt="twitter_логотип">
                 </a>
                 <a href="#" class="facebook">
-                    <img src="img/fb-icon.svg" width="17" height="15" alt="facebook_логотип">
+                    <img src="img/fb-icon.svg" width="12" height="22" alt="facebook_логотип">
                 </a>
                 <a href="#" class="youtube">
-                    <img src="img/youtube.svg" width="17" height="15" alt="youtube_логотип">
+                    <img src="img/youtube.svg" width="12" height="22" alt="youtube_логотип">
                 </a>
             </div>
 
             <a href="https://htmlacademy.ru/" class="copyright">
                 <p>website by</p>
-                <img src="img/logo-htmlacademy.svg" width="108.08" height="36.85" alt="htmlacademy_логотип" class="logo-htmlacademy">            
+                <img src="img/logo-htmlacademy.svg" width="108" height="36" alt="htmlacademy_логотип" class="logo-htmlacademy">            
             </a>
             
         </div>  
