--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </container> 
 
             <container class="polygon">
-            	<img src="img/polygon.svg" width="1201" height="59" alt="Седона лучше Гранд Каньон">
+            	<img src="img/polygon.svg" alt="Седона лучше Гранд Каньон">
             </container>
 
 		</nav>   	
